todo list and some small cleanup to ready for deployment testing